--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
          <section id="form-section">
             <form>
-            <input>
-            <input>
-            <button></button>
+            <input placeholder="Name">
+            <input placeholder="Email">
+            <button>Enter</button>
             </form>
         </section>
 
